Small test fix and updated documentation